--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             <a href="#home" class="menu-item active">Inicio</a>
             <a href="#about" class="menu-item">Sobre</a>
             <a href="#contact" class="menu-item">Contato</a>
-            <a href="iniciar_projeto.html" class="menu-item">Iniciar Projeto</a>
-            <a href="#" target="_blank" rel="noopener noreferrer" class="menu-item external">Portfolio</a>
+            <a href="https://joserobertorocha.github.io/Portf-lio/" target="_blank" rel="noopener noreferrer" class="menu-item external">Portfolio</a>
         </nav>
         
         <div class="menu-toggle" id="menuToggle">
@@ -375,3 +374,4 @@
 
 </body>
 </html>
+
