--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
     <section id="about" class="section">
         <div class="about-content">
             <div class="about-header">
-                <h2>Criação de Sites Modernos e Responsivos</h2>
-                <p>Inovação que constrói sua presença online.</p>
+                <h2>Criamos o seu Site</h2>
+                <p>Modernos e Responsivos</p>
             </div>
             
             <div class="about-main">
@@ -374,4 +374,5 @@
 
 </body>
 </html>
+
 
